--- a/pom.xml
+++ b/pom.xml
@@ -30,18 +30,42 @@
    <version>5.2</version>
   </parent>
   <groupId>org.xwiki.contrib</groupId>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
   <artifactId>xwiki-contrib-rtbackend</artifactId>
   <name>Realtime Backend</name>
   <description>Backend support for Realtime Applications
 You probably don't want to install this directly</description>
+
+  <properties>
+    <xwiki.version>5.2</xwiki.version>
+  </properties>
 
   <dependencies>
 
     <dependency>
       <groupId>org.xwiki.contrib</groupId>
       <artifactId>xwiki-contrib-websocket</artifactId>
-      <version>1.0</version>
+      <version>1.5-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.inject</groupId>
+      <artifactId>javax.inject</artifactId>
+      <version>1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.xwiki.commons</groupId>
+      <artifactId>xwiki-commons-component-api</artifactId>
+      <version>${xwiki.version}</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-model</artifactId>
+      <version>${xwiki.version}</version>
+      <scope>provided</scope>
     </dependency>
 
   </dependencies>
