--- a/chainpad-protocol-old/pom.xml
+++ b/chainpad-protocol-old/pom.xml
@@ -39,7 +39,7 @@ You probably don't want to install this directly</description>
   <scm>
     <connection>scm:git:git://github.com/xwiki-contrib/realtime-backend.git</connection>
     <developerConnection>scm:git:git@github.com:xwiki-contrib/realtime-backend.git</developerConnection>
-    <url>https://github.com/xwiki-contrib/realtime-backend</url>
+    <url>https://github.com/xwiki-contrib/realtime-backend/chainpad-protocol-old</url>
     <tag>HEAD</tag>
   </scm>
   <distributionManagement>
@@ -86,6 +86,11 @@ You probably don't want to install this directly</description>
       <artifactId>xwiki-platform-model</artifactId>
       <version>${xwiki.version}</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.3.3</version>
     </dependency>
 
   </dependencies>
