--- a/netflux/pom.xml
+++ b/netflux/pom.xml
@@ -31,7 +31,7 @@
   </parent>
   <groupId>org.xwiki.contrib</groupId>
   <version>1.0-SNAPSHOT</version>
-  <artifactId>xwiki-contrib-rtnetfluxbackend</artifactId>
+  <artifactId>xwiki-contrib-netflux</artifactId>
   <name>Realtime Netflux Backend</name>
   <description>Backend support for Realtime Applications using the Netflux API
 You probably don't want to install this directly</description>
