--- a/netflux/pom.xml
+++ b/netflux/pom.xml
@@ -30,7 +30,7 @@
     <version>7.1.2</version> <!-- see xwiki.version -->
   </parent>
   <groupId>org.xwiki.contrib</groupId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <artifactId>xwiki-contrib-netflux</artifactId>
   <name>Realtime Netflux Backend</name>
   <description>Backend support for Realtime Applications using the Netflux API
@@ -40,7 +40,7 @@ You probably don't want to install this directly</description>
     <connection>scm:git:git://github.com/xwiki-contrib/realtime-backend.git</connection>
     <developerConnection>scm:git:git@github.com:xwiki-contrib/realtime-backend.git</developerConnection>
     <url>https://github.com/xwiki-contrib/realtime-backend/tree/master/netflux</url>
-    <tag>HEAD</tag>
+    <tag>xwiki-contrib-netflux-1.0</tag>
   </scm>
   <distributionManagement>
     <repository>
