--- a/netflux/pom.xml
+++ b/netflux/pom.xml
@@ -33,9 +33,7 @@
   <version>1.1-SNAPSHOT</version>
   <artifactId>xwiki-contrib-netflux</artifactId>
   <name>Realtime Netflux Backend</name>
-  <description>Backend support for Realtime Applications using the Netflux API
-You probably don't want to install this directly</description>
-
+  <description>Backend support for Realtime Applications using the Netflux API.</description>
   <scm>
     <connection>scm:git:git://github.com/xwiki-contrib/realtime-backend.git</connection>
     <developerConnection>scm:git:git@github.com:xwiki-contrib/realtime-backend.git</developerConnection>
