--- a/netflux/pom.xml
+++ b/netflux/pom.xml
@@ -30,7 +30,7 @@
     <version>7.1.2</version> <!-- see xwiki.version -->
   </parent>
   <groupId>org.xwiki.contrib</groupId>
-  <version>1.2-SNAPSHOT</version>
+  <version>1.2</version>
   <artifactId>xwiki-contrib-netflux</artifactId>
   <name>Realtime Netflux Backend</name>
   <description>Backend support for Realtime Applications using the Netflux API.</description>
